Fixed some stuff.

--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h2>Something</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem.</p>
 				</div>
 				<div class="col-md-4">
 					<h2>Really</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem.</p>
 				</div>
 				<div class="col-md-4">
 					<h2>Interesting</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem.</p>
 				</div>
 			</div>	
 		</div>
 
 		<!-- Tabs + Dropdown -->
-		<div>
+		<br><br><div>
 		    <ul class="nav nav-tabs nav-justified" id="myTab">
 		        <li class="active"><a href="#sectionA">TAB A</a></li>
 		        <li><a href="#sectionB">TAB B</a></li>
@@ -63,20 +63,36 @@
 		    </ul>
 		    <div class="tab-content">
 		        <div id="sectionA" class="tab-pane fade in active">
-		            <h3>TAB A</h3>
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+		        	<div class="col-md-6 col-md-offset-3">
+			            <h3>TAB A</h3>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
 		        </div>
 		        <div id="sectionB" class="tab-pane fade">
-		            <h3>TAB B</h3>
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        <div class="col-md-6 col-md-offset-3">
+			            <h3>TAB B</h3>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
 		        </div>
 		        <div id="dropdown1" class="tab-pane fade">
-		            <h3>ITEM 1</h3>
-		            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+		        	<div class="col-md-3 col-md-offset-3">
+			            <h3>ITEM 1</h3>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
+			        <div class="col-md-3">
+			        	<br><br>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
 		        </div>
 		        <div id="dropdown2" class="tab-pane fade">
-		            <h3>ITEM 2</h3>
-		            <p>DLorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+		            <div class="col-md-3 col-md-offset-3">
+			            <h3>ITEM 2</h3>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
+			        <div class="col-md-3">
+			        	<br><br>
+			            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis dignissim urna, et consequat nisi aliquet gravida. Phasellus pharetra nunc sed lorem ultrices, vel ornare arcu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer eleifend lobortis viverra. Morbi eget felis odio. Etiam vulputate lacus sed odio aliquet, eu ullamcorper neque mollis. Aliquam vitae erat sem. In pharetra posuere posuere.</p>
+			        </div>
 		        </div>
 	    	</div>
 	    </div>
